--- a/pilot/util/default.cfg
+++ b/pilot/util/default.cfg
@@ -36,7 +36,7 @@ testjobcommand: normal
 testtransfertype: NULL
 
 # The URL for the PanDA server
-pandaserver: https://pandaserver.cern.ch:25443
+pandaserver: http://127.0.0.1:8080
 # pandaserver: https://aipanda007.cern.ch:25443
 
 # The heartbeat period in seconds (30*60 = 1800 s in normal mode, 5 * 60=300 s in ddebug mode)
@@ -63,7 +63,7 @@ maximum_input_file_sizes: 14336 MB
 local_size_limit_stdout: 2097152
 
 # The maximum number of getJob requests
-maximum_getjob_requests: 2
+maximum_getjob_requests: 1
 
 # Looping job time limits; if job does not write anything in N hours, it is considered a looping job
 looping_verification_time: 600
