updated config for Cori

--- a/pilot/util/default.cfg
+++ b/pilot/util/default.cfg
@@ -36,7 +36,7 @@ testjobcommand: normal
 testtransfertype: NULL
 
 # The URL for the PanDA server
-pandaserver: https://pandaserver.cern.ch:25443
+pandaserver: http://127.0.0.1:8080
 # pandaserver: https://aipanda007.cern.ch:25443
 
 # The heartbeat period in seconds (30*60 = 1800 s in normal mode, 5 * 60=300 s in ddebug mode)
@@ -109,7 +109,7 @@ redundant: /cvmfs/atlas.cern.ch/repo/sw/PandaPilot/config/redundant.txt
 # E.g. MemoryMonitor is used as an internal name. The actual command is 'prmon'
 utility_before_payload:
 utility_with_payload:
-utility_after_payload_started: MemoryMonitor
+utility_after_payload_started:
 utility_with_stagein:
 
 ################################
